fix z-index issue with console-panel and the subnav on smaller viewports

--- a/ui/app/styles/components/console-ui-panel.scss
+++ b/ui/app/styles/components/console-ui-panel.scss
@@ -146,6 +146,7 @@
 header .navbar,
 header .navbar-sections {
   z-index: 200;
+  position: relative;
   transform: translate3d(0, 0, 0);
   will-change: transform;
 }
